--- a/public/css/stylesheets/partials/landing-page/_landing-page.sass
+++ b/public/css/stylesheets/partials/landing-page/_landing-page.sass
@@ -158,7 +158,7 @@ aside
 
     .our-story-text
       width: 100%
-      min-height: 100vh
+      height: 100vh
       color: $white-alpha-7
       display: flex
       flex-direction: column
